HLAE 2.0.1.7

* Added mirv_tfc_specmenu - allows to disable and enable spectator menu in Team Fortress Classic


HLAE 2.0.1.6

* Added mirv_matte_entities to improve and thus replace mirv_movie_onlyentity,
  enter mirv_matte_entities into console for more info.
  
* Removed mirv_movie_onlyentity

* Fixed typo in launcher that would cause problems when launching TFC mod


HLAE 2.0.1.5

* linked MS VC++ Runtime to the hlae.exe to avoid users being unable
  to launch HLAE (They saw the error message "This application has failed
  to start because the application configuration is incorrect. Reinstalling
  the application may fix this problem.")
  Not the nicest way to fix this, but does it for now.
  Thx to azrazr for testing.


HLAE 2.0.1.4

* Fixed -hlaealpha8 not working
* Added __mirv_movie_fpscap
    1: default
    0: disables the 1000 fps cap on mirv_movie_fps for testing purposes

Greetz and thanks to:
  MN|VadoskiN, juGGaKNot, you.


HLAE 2.0.1.3

* Improved behaviour of 'Undock' capture mode.
* Fixed game behaviour when window is deactivated (i.e. due to windows key, etc.).


HLAE 2.0.1.2

Fixed:
  Bug that affect performance when using FBO (still bad FPS after filming
  was stopped in case switching FBOs is slow on the gfx card).


HLAE 2.0.1.1

Added missing file to download, in case you already downloaded 2.0.1
please re-download!
Sorry : )


HLAE 2.0.1

This is release is mainly for making the HLAE Gui more reliable, thus we'll
also stop offering two different versions (stable and pre-release). 

Added:
  Support for rendering to other targets than the default window buffer.
  The most important one is EXT_framebuffer_object, which allows off-screen
  rendering for cards that support it:
  This fixes problems with missing contents in the capture (i.e. due parts of
  the window not being visible), which especially happened to NVIDIA card
  users.
  The new target(s) can be selected from the HLAE File->Launch dialog.

Added: